Fixed spacing

--- a/public/blog-style.css
+++ b/public/blog-style.css
@@ -84,9 +84,9 @@ footer {
     position: absolute;
     top: 10%;
     left: 10%;
-    font-size: 6rem;
+    font-size: 4rem;
     color: white;
-    line-height: 90px;
+    line-height: 60px;
 }
 
 .cover-excerpt {
@@ -95,7 +95,7 @@ footer {
     color: #ffffff;
     font-weight: 400;
     font-style: normal;
-    font-size: 20px;
+    font-size: 13px;
     margin-right: 30px;
     bottom: 30%;
     left: 10%;
